--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "haile-2.0",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://hthomp15.github.io",
+  "homepage": "https://hthomp15.github.io/haile_portfolio_2.0",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
