--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "haile-2.0",
+  "name": "haile_portfolio_2.0",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://hthomp15.github.io/haile_portfolio_2.0",
