--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "haile_portfolio_2.0",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://hthomp15.github.io/haile_portfolio_2.0",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
@@ -18,9 +17,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -46,7 +43,6 @@
   "license": "ISC",
   "devDependencies": {
     "autoprefixer": "^10.4.7",
-    "gh-pages": "^4.0.0",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.1.0"
   }
