--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -46,7 +46,6 @@
   "license": "ISC",
   "devDependencies": {
     "autoprefixer": "^10.4.7",
-    "gh-pages": "^3.2.3",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.1.0"
   }
