--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "haile_portfolio_2.0",
   "version": "0.1.0",
-  "homepage": "https://hthomp15.github.io/haile_portfolio_2.0",
+  "homepage": "https://hthomp15.github.io/haile_portfolio_2.0/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
